need to debgug before adding resume stuff

--- a/portfoliocraft/templates/account.html
+++ b/portfoliocraft/templates/account.html
@@ -4,13 +4,13 @@
 
 <div class="jumbotron">
     <div align='center'>
-        <h1>Welcome to the page for {{ current_user.username }} </h1>
-        <img align='center' src="{{url_for('static', filename='profile_pics'+current_user.profile_image)}}">
-    </div>
+        <h1 >Welcome to the page for {{current_user.username}}</h1>
+        <img class="profile-pic" align='center' src="{{ url_for('static', filename='profile_pics/' + current_user.profile_image) }}">
+        <p>{{ current_user.email }}</p>
 </div>
 
-<div class="containger">
-    <form method="POST">
+<div class="container">
+    <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <div class="form-group">
         {{ form.first_name.label(class='form-group') }} 
@@ -36,8 +36,9 @@
         {{ form.picture.label(class='form-group') }} 
         {{ form.picture(class='form-control') }}
         </div>
+        <br>
 
-        {{ form.submit(class='btn btn-primary') }}
+        {{ form.submit(class='btn btn-warning') }}
     </form>
 </div>
 
