--- a/portfoliocraft/templates/base.html
+++ b/portfoliocraft/templates/base.html
@@ -22,7 +22,7 @@
           {% if current_user.is_authenticated %}
           <li class="nav-link"><a href="{{ url_for('users.logout') }}">Log Out</a></li>
           <li class="nav-link"><a href="{{ url_for('users.account') }}">Account</a></li>
-          <li class="nav-link"><a href="#">Post Project</a></li>
+          <li class="nav-link"><a href="{{ url_for('projects.create_project')}}">Add A Project</a></li>
           {% else %}
           <li class="nav-link"><a href="{{ url_for('users.login') }}">Log In</a></li>
           <li class="nav-link"><a href="{{ url_for('users.register') }}">Register</a></li>
