need to figure out relationship issues

--- a/portfoliocraft/templates/account.html
+++ b/portfoliocraft/templates/account.html
@@ -34,7 +34,7 @@
 
         <div class="form-group">
         {{ form.picture.label(class='form-group') }} 
-        {{ form.picture(class='form-control') }}
+        {{ form.picture(class='form-control-file') }}
         </div>
         <br>
 
