--- a/portfoliocraft/templates/account.html
+++ b/portfoliocraft/templates/account.html
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <div align='center'>
-        <h1 >Welcome to the page for {{current_user.username}}</h1>
+        <h1 >Edit {{current_user.first_name}}'s Information </h1>
         <img class="profile-pic" align='center' src="{{ url_for('static', filename='profile_pics/' + current_user.profile_image) }}">
         <p>{{ current_user.email }}</p>
 </div>
