--- a/portfoliocraft/templates/error_pages/404.html
+++ b/portfoliocraft/templates/error_pages/404.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="jumbotron">
-    <h1>404 Page Not Found</h1>
+    <h1>404 Page Not Found!</h1>
 </div>
 
 {% endblock %}
