--- a/portfoliocraft/templates/index.html
+++ b/portfoliocraft/templates/index.html
@@ -12,8 +12,9 @@
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{project.title}}</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">{{project.description}}</p>
           <a href=" {{url_for('projects.project', project_id = project.id)}}" class="btn btn-primary">View Project</a>
+          <br><br>
           <a href=" {{url_for('users.user_projects', username = project.author.username)}}" class="btn btn-primary">Created By: {{ project.author.username }}</a>
           <p>Posted On: {{ project.date.strftime('%Y-%m-%d')}}</p>
         </div>
@@ -28,7 +29,7 @@
         {% for page_num in projects.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=1) %}
         {% if projects.page == page_num %}
         <li class="page-item disabled">
-            <a class="page-link" href="{{url_for('core.index', page = page_num)}}">{{ page_num }}</a>
+            <a class="page-link" href="{{url_for('core.index', page = page_num)}}">Page {{ page_num }}</a>
         </li>
         {% else %}
         <li class="page-item">
