--- a/portfoliocraft/templates/project.html
+++ b/portfoliocraft/templates/project.html
@@ -5,14 +5,14 @@
 <div class="jumbotron">
     <h1>{{ project.title }}</h1>
     <h2>Created By: {{ project.author.username }}</h2>
-    <h3>Posted: {{ post.date.strftime('%B %d, %Y') }}</h3>
+    <h3>Posted: {{ project.date.strftime('%B %d, %Y') }}</h3>
     <p>{{ project.description }}</p>
 
     <!-- NEED TO ADD PIC, DEMO, GITHUB LINKS -->
 {% if project.author == current_user %}
 <div>
     <a href="{{url_for('projects.update', project_id = project.id)}}">Update Project</a>
-    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#del_modal">Delete</button>
+    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#del_modal">Delete</button>
 </div>
 
 {% endif %}
@@ -20,26 +20,25 @@
 
 <div class="modal" tabindex="-1" role="dialog" id="del_modal">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Delete Project?</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-            </div>
-            <div class="modal-body">
-                <p>Are you sure you want to delete this project?</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Don't Do It</button>
-                
-                <form action="{{ url_for('projects.delete_project', project_id = project.id) }}" method="POST">
-                <input class='btn btn-danger' type="submit" value="Do It">
-                </form>
-
-            </div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Delete Confirmation</h5>
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
+        <div class="modal-body">
+          <p>Are you sure you want to delete this project?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Don't Do It</button>
+
+          <form action="{{ url_for('projects.delete_project', project_id=project.id) }}" method="POST">
+            <input class="btn btn-danger" type="submit" value="Do It">
+          </form>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
 
 {% endblock %}
