--- a/portfoliocraft/templates/index.html
+++ b/portfoliocraft/templates/index.html
@@ -9,7 +9,7 @@
 <div class="container">
     {% for project in projects.items %}
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{project.title}}</h5>
           <p class="card-text">{{project.description}}</p>
