--- a/portfoliocraft/templates/user_projects.html
+++ b/portfoliocraft/templates/user_projects.html
@@ -26,7 +26,7 @@ Created By: <a href="{{url_for('users.user_projects', username = project.author.
 <!-- PAGINATION -->
 <nav aria-label="Page Navigation example">
     <ul class="pagination justify-content-center">
-        {% for page_num in projects.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=1)}
+        {% for page_num in projects.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=1) %}
         {% if projects.page == page_num %}
         <li class="page-item disabled">
             <a class="page-link" href="{{url_for('users.user_projects', username = user.username, page = page_num)}}">{{ page_num }}</a>
