--- a/portfoliocraft/templates/index.html
+++ b/portfoliocraft/templates/index.html
@@ -8,15 +8,13 @@
 
 <div class="container">
     {% for project in projects.items %}
-    <div class="card" style="width: 18rem;">
-        <img src="" class="card-img-top" alt="...">
+    <div class="card text-center" style="width: 18rem;">
+        <img src="{{project.screenshot}}" class="card-img-top" alt="project_image">
         <div class="card-body">
           <h5 class="card-title">{{project.title}}</h5>
-          <p class="card-text">{{project.description}}</p>
-          <a href=" {{url_for('projects.project', project_id = project.id)}}" class="btn btn-primary">View Project</a>
+          <a href=" {{url_for('projects.project', project_id = project.id)}}" class="btn btn-success">View Project</a>
           <br><br>
           <a href=" {{url_for('users.user_projects', username = project.author.username)}}" class="btn btn-primary">Created By: {{ project.author.username }}</a>
-          <p>Posted On: {{ project.date.strftime('%Y-%m-%d')}}</p>
         </div>
       </div>
     {% endfor %}
@@ -24,7 +22,7 @@
 </div>
 
 
-<nav aria-label="Page Navigation example">
+<nav aria-label="Page Navigation">
     <ul class="pagination justify-content-center">
         {% for page_num in projects.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=1) %}
         {% if projects.page == page_num %}
