--- a/portfoliocraft/templates/create_project.html
+++ b/portfoliocraft/templates/create_project.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block body %}
-
+<br>
+<h1 align="center">Add A Project</h1>
 <div class="container">
     <form class="form-group" method="POST">
         {{ form.hidden_tag() }}
@@ -25,7 +26,7 @@
                 <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm13 1a.5.5 0 0 1 .5.5v6l-3.775-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12v.54A.505.505 0 0 1 1 12.5v-9a.5.5 0 0 1 .5-.5h13z"/>
               </svg>
               <br>
-            {{ form.screenshot(class='form-control-file form-control-lg') }}
+            {{ form.screenshot(class='form-control form-control-lg') }}
         </div>
         <div class="form-group">
             {{ form.demo_link.label(class='form-control-label') }}
