--- a/portfoliocraft/templates/index.html
+++ b/portfoliocraft/templates/index.html
@@ -2,14 +2,14 @@
 
 {% block body %}
 
-<div class="jumbotron">
-    <h1>PortfolioCraft</h1>
+<div align="center" class="jumbotron">
+    <h1>All Projects</h1>
 </div>
 
-<div class="container">
+<div align="center" class="container">
     {% for project in projects.items %}
     <div class="card text-center" style="width: 18rem;">
-        <img src="{{project.screenshot}}" class="card-img-top" alt="project_image">
+        <img class="card-img-top" src="{{ project.screenshot }}" alt="project_image">
         <div class="card-body">
           <h5 class="card-title">{{project.title}}</h5>
           <a href=" {{url_for('projects.project', project_id = project.id)}}" class="btn btn-success">View Project</a>
@@ -21,6 +21,7 @@
 
 </div>
 
+<br><br>
 
 <nav aria-label="Page Navigation">
     <ul class="pagination justify-content-center">
