--- a/portfoliocraft/templates/user_projects.html
+++ b/portfoliocraft/templates/user_projects.html
@@ -2,28 +2,37 @@
 
 {% block body %}
 
-<div class="containter">
+<div class="container">
     <div class="jumbotron">
         <div align="center">
-            <h1>Welcome to the page for {{ user.username }}</h1>
-            <img src="{{url_for('static', filename = 'profile_pics/'+user.profile_image)}}">
+            <h1>Welcome to the page for {{ user.first_name }} {{ user.last_name }}</h1>
+            <br>
+            <img class="profile-pic" src="{{url_for('static', filename = 'profile_pics/'+user.profile_image)}}">
         </div>
     </div>
-
+    
+<div id="projects-and-resume">
+    <h1>Projects</h1>
 {% for project in projects.items %}
 
-<h2> <a href="{{url_for('projects.project', project_id = project.id)}}">{{project.title}}</a></h2>
-Created By: <a href="{{url_for('users.user_projects', username = project.author.username)}}"> {{project.author.username}} </a>
+<div class="card text-center" style="width: 18rem;">
+    <img src="{{project.screenshot}}" class="card-img-top" alt="project_image">
+    <div class="card-body">
+      <h5 class="card-title">{{project.title}}</h5>
+      <a href=" {{url_for('projects.project', project_id = project.id)}}" class="btn btn-success">View Project</a>
+      <br><br>
+      
+    </div>
+ 
 
-<p class="text-muted">Published on: {{project.date.strftime('%Y-%m-%d')}}</p>
-<br>
-<p>{{ project.description }}</p>
-<br>
 {% endfor %}
+ </div>
+
+
 </div>
 
+</div>
 
-<!-- PAGINATION -->
 <nav aria-label="Page Navigation example">
     <ul class="pagination justify-content-center">
         {% for page_num in projects.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=1) %}
