--- a/portfoliocraft/templates/create_project.html
+++ b/portfoliocraft/templates/create_project.html
@@ -3,8 +3,9 @@
 {% block body %}
 <br>
 <h1 align="center">Add A Project</h1>
-<div class="container">
-    <form class="form-group" method="POST">
+<div class="row align-items-center" align="center" style="height: 100vh;">
+    <div class="mx-auto col-10 col-md-8 col-lg-6">
+    <form class="form-group" method="POST"  enctype="multipart/form-data">
         {{ form.hidden_tag() }}
 
         <div class="form-group">
@@ -26,7 +27,7 @@
                 <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm13 1a.5.5 0 0 1 .5.5v6l-3.775-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12v.54A.505.505 0 0 1 1 12.5v-9a.5.5 0 0 1 .5-.5h13z"/>
               </svg>
               <br>
-            {{ form.screenshot(class='form-control form-control-lg') }}
+            {{ form.screenshot(class='form-control-file') }}
         </div>
         <div class="form-group">
             {{ form.demo_link.label(class='form-control-label') }}
@@ -46,10 +47,10 @@
             {{ form.github_link(class='form-control form-control-lg') }}
         </div>
         <div class="form-group">
-            {{ form.submit(class='btn btn-outline-info') }}
+            {{ form.submit(class='btn btn-info') }}
         </div>
     </form>
-
+</div>
 </div>
 
 {% endblock %}
