--- a/portfoliocraft/templates/resume.html
+++ b/portfoliocraft/templates/resume.html
@@ -2,18 +2,23 @@
 
 {% block body %}
 
+<div class="container" align="center">
+
+
+{% if img %}
+<h1>Your Resume:</h1>
+<img class="rendered-resume" src="{{url_for('static', filename='resumes/' + img)}}">
+{% else %}
+<h1>Upload Resume To Preview</h1>
+<br>
 <form action="{{ url_for('users.upload_file') }}" enctype="multipart/form-data" method="POST">
     <input name="img" type="file"/>
     <input type="submit"/>
 </form>
-
-{% if img %}
-<h1>Rendered Image</h1>
-<img src="{{url_for('static', filename='resumes/' + img)}}">
-{% else %}
-<h1>Image will render here...</h1>
+<br>
+<button class="btn btn-danger"><a id="back" href="{{url_for('users.account')}}">Go Back</a></button>
 {% endif %}
 
 
-
+</div>
 {% endblock %}ß
