--- a/portfoliocraft/templates/base.html
+++ b/portfoliocraft/templates/base.html
@@ -3,14 +3,16 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/styles.css"/>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>PortfolioCraft Home</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" style="background-color: #264653;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Navigation</a>
+          <a id="port-nav" class="navbar-brand" href="/">PortfolioCraft</a>
           <div class="collapse navbar-collapse">
             <div class="navbar-nav">
             <a class="nav-link" href="{{ url_for('core.index') }}"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-house-heart-fill" viewBox="0 0 16 16">
@@ -44,20 +46,28 @@
         </div>
        </div>
       </nav>
+
+      {% for msg in get_flashed_messages() %}
+    
+      <div class="alert alert-info
+      alert-dismissible fade show mx-5 mt-4
+      border border-success" role="alert">
+      <b>{{ msg }}</b>
+      <button type="button" class="close"
+          data-dismiss="alert">
+          <h6>Exit</h6>
+      </button>
+      </div>
+      
+      {% endfor %}
+
+
 {% block body %}
- 
+
 {% endblock %}
 
-{% for msg in get_flashed_messages() %}
-    
-    <div class="alert alert-info alert-dismissible fade show mx-5 mt-4 border border-success" role="alert">
-    <b>{{ msg }}</b>
-    <button type="button" class="close" data-dismiss="alert">
-        <h6>X</h6>
-    </button>
-    </div>
 
-    {% endfor %}
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
