--- a/portfoliocraft/templates/index.html
+++ b/portfoliocraft/templates/index.html
@@ -8,8 +8,8 @@
 
 <div align="center" class="container">
     {% for project in projects.items %}
-    <div class="card text-center" style="width: 18rem;">
-        <img class="card-img-top" src="{{ project.screenshot }}" alt="project_image">
+    <div class="card text-center" style="width: 18rem; background-color: #264653;">
+        <img class="card-img-top" src="{{url_for('static', filename = 'screenshots/' +project.screenshot)}}" alt="project_image">
         <div class="card-body">
           <h5 class="card-title">{{project.title}}</h5>
           <a href=" {{url_for('projects.project', project_id = project.id)}}" class="btn btn-success">View Project</a>
