--- a/portfoliocraft/templates/register.html
+++ b/portfoliocraft/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-
+<div class="container">
 <form method="POST">
     {{ form.hidden_tag() }}
     {{ form.first_name.label }} {{ form.first_name() }}
@@ -18,5 +18,6 @@
     <br>
     {{ form.submit() }}
 </form>
+</div>
 
 {% endblock %}
