--- a/portfoliocraft/templates/user_projects.html
+++ b/portfoliocraft/templates/user_projects.html
@@ -8,30 +8,28 @@
             <h1>Welcome to the page for {{ user.first_name }} {{ user.last_name }}</h1>
             <br>
             <img class="profile-pic" src="{{url_for('static', filename = 'profile_pics/'+user.profile_image)}}">
+            <div style="width: 18rem;"><img class="card-img-top" src="{{url_for('static', filename = 'resumes/'+user.resume)}}" alt="resume">
+        </div>
         </div>
     </div>
+
     
 <div id="projects-and-resume">
     <h1>Projects</h1>
 {% for project in projects.items %}
 
 <div class="card text-center" style="width: 18rem;">
-    <img src="{{project.screenshot}}" class="card-img-top" alt="project_image">
-    <div class="card-body">
+    <img src="{{url_for('static', filename = 'screenshots/' +project.screenshot)}}" class="card-img-top" alt="project_image">
+    <div class="card-body"  style="background-color: #264653;">
       <h5 class="card-title">{{project.title}}</h5>
       <a href=" {{url_for('projects.project', project_id = project.id)}}" class="btn btn-success">View Project</a>
       <br><br>
-      
+      </div>
     </div>
- 
 
 {% endfor %}
- </div>
-
-
-</div>
-
-</div>
+<br>
+    
 
 <nav aria-label="Page Navigation example">
     <ul class="pagination justify-content-center">
