--- a/portfoliocraft/templates/register.html
+++ b/portfoliocraft/templates/register.html
@@ -1,23 +1,53 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<div class="container">
+<div class="row align-items-center" align="center" style="height: 100vh;">
+    <div class="mx-auto col-10 col-md-8 col-lg-6">
+    <h1>Registration</h1>
+    <br>
 <form method="POST">
     {{ form.hidden_tag() }}
-    {{ form.first_name.label }} {{ form.first_name() }}
+    <div class="form-group">
+        {{ form.first_name.label(class='form-control-label') }}
+
+        {{ form.first_name(class='form-control form-control-lg') }}
+    </div>
     <br>
-    {{ form.last_name.label }} {{ form.last_name() }}
+    <div class="form-group">
+        {{ form.last_name.label(class='form-control-label') }}
+
+        {{ form.last_name(class='form-control form-control-lg') }}
+    </div>
     <br>
-    {{ form.username.label}} {{form.username() }}
+    <div class="form-group">
+        {{ form.username.label(class='form-control-label') }}
+
+        {{ form.username(class='form-control form-control-lg') }}
+    </div>
     <br>
-    {{ form.email.label}} {{form.email() }}
+    <div class="form-group">
+        {{ form.email.label(class='form-control-label') }}
+
+        {{ form.email(class='form-control form-control-lg') }}
+    </div>
     <br>
-    {{ form.password.label }} {{ form.password() }}
+    <div class="form-group">
+        {{ form.password.label(class='form-control-label') }}
+
+        {{ form.password(class='form-control form-control-lg') }}
+    </div>
     <br>
-    {{ form.pass_confirm.label }} {{ form.pass_confirm() }}
+    <div class="form-group">
+        {{ form.pass_confirm.label(class='form-control-label') }}
+
+        {{ form.pass_confirm(class='form-control form-control-lg') }}
+    </div>
     <br>
-    {{ form.submit() }}
+    <div class="form-group">
+        {{ form.submit(class='btn btn-info') }}
+    </div>
 </form>
+</div>
 </div>
 
 {% endblock %}
