--- a/portfoliocraft/templates/resume.html
+++ b/portfoliocraft/templates/resume.html
@@ -2,8 +2,9 @@
 
 {% block body %}
 
-<div class="container" align="center">
 
+<div class="align-items-center" align="center" style="height: 100vh;">
+<br><br><br>
 
 {% if img %}
 <h1>Your Resume:</h1>
