--- a/portfoliocraft/templates/login.html
+++ b/portfoliocraft/templates/login.html
@@ -7,11 +7,21 @@
     <div class="mx-auto col-10 col-md-8 col-lg-6">
 <form method="POST">
     {{ form.hidden_tag() }}
-    {{ form.email.label }} {{ form.email() }}
+
+    <div class="form-group">
+        {{ form.email.label(class='form-control-label') }}
+
+        {{ form.email(class='form-control form-control-lg') }}
+    </div>
+    <div class="form-group">
+        {{ form.password.label(class='form-control-label') }}
+
+        {{ form.password(class='form-control form-control-lg') }}
+        </div>
     <br>
-    {{ form.password.label }} {{ form.password }}
-    <br>
-    {{ form.submit() }}
+    <div class="form-group">
+        {{ form.submit(class='btn btn-info') }}
+    </div>
 </form>
 </div>
 </div>
