--- a/portfoliocraft/static/styles.css
+++ b/portfoliocraft/static/styles.css
@@ -75,6 +75,7 @@ body {
 
 .flex-container {
     display: flex;
+    justify-content: space-evenly;
 }
 
 .flex-child {
@@ -85,6 +86,35 @@ body {
     margin-right: 20px;
 }
 
-#project-screenshot {
+.demo-link:hover {
+    color: #e76f51;
+}
 
+.demo-link {
+    color:#264653
+}
+
+.project-link:hover {
+    color: #e76f51;
+}
+
+.project-link {
+    color:#264653
+}
+
+h1 {
+    color: maroon;
+}
+
+h2 {
+    color:#e76f51
+}
+
+.index {
+    justify-content: space-evenly;
+}
+
+#project-screenshot {
+    height: 30%;
+    width: 30%;
 }
