--- a/portfoliocraft/templates/project.html
+++ b/portfoliocraft/templates/project.html
@@ -10,11 +10,11 @@
     <img id="project-screenshot" src="{{url_for('static', filename = 'screenshots/' +project.screenshot)}}" alt="screenshot">
     <br><br><br>
     <p>{{ project.description }}</p>
-    <a href="{{project.github_link}}" target=”_blank”><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+    <a class="project-link" href="{{project.github_link}}" target=”_blank”><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
       <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
     </svg></a>
     <h3>|</h3>
-    <a href="{{project.demo_link}}" target=”_blank”><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
+    <a class='demo-link' href="{{project.demo_link}}" target=”_blank”><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-camera-reels-fill" viewBox="0 0 16 16">
       <path d="M6 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
       <path d="M9 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
       <path d="M9 6h.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 7.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 16H2a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h7z"/>
@@ -23,7 +23,6 @@
 
 {% if project.author == current_user %}
 <div>
-    <button type="button" class="btn btn-warning"><a id="update-btn" href="{{url_for('projects.update', project_id = project.id)}}">Update</a></button>
     <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#del_modal">Delete</button>
 </div>
 <h6>Posted: {{ project.date.strftime('%B %d, %Y') }}</h6>
