--- a/portfoliocraft/templates/index.html
+++ b/portfoliocraft/templates/index.html
@@ -3,9 +3,10 @@
 {% block body %}
 
 <div align="center" class="jumbotron">
-    <h1>All Projects</h1>
+    <h1>Welcome to PortfolioCraft</h1>
 </div>
-
+<div align="center"><h2>Current Projects Hosted Here</h2></div>
+<br>
 <div class="flex-container index" align="center">
     {% for project in projects.items %}
     <div class="card text-center" style="width: 18rem; background-color: #264653;">
