--- a/portfoliocraft/templates/register.html
+++ b/portfoliocraft/templates/register.html
@@ -3,9 +3,10 @@
 {% block body %}
 <div class="row align-items-center" align="center" style="height: 100vh;">
     <div class="mx-auto col-10 col-md-8 col-lg-6">
+        <br>
     <h1>Registration</h1>
     <br>
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
     <div class="form-group">
         {{ form.first_name.label(class='form-control-label') }}
@@ -49,5 +50,8 @@
 </form>
 </div>
 </div>
+
+
+
 
 {% endblock %}
